<?xml version="1.0" encoding="UTF-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item android:title="@string/Home" android:icon="@drawable/ic_baseline_home_24" android:id="@+id/nav_home"/>
        <item android:title="@string/search" android:icon="@drawable/ic_baseline_search_24" android:id="@+id/nav_search"/>
        <item android:title="@string/profile" android:icon="@drawable/ic_baseline_assignment_24" android:id="@+id/nav_profile"/>
        <item android:title="@string/settings" android:icon="@drawable/ic_baseline_settings_24" android:id="@+id/nav_settings"/>
    </group>


    <group android:checkableBehavior="single">
        <item android:title="@string/Communicate">
            <menu>
                <group>
                    <item android:title="@string/Share" android:icon="@drawable/ic_baseline_search_24" android:id="@+id/nav_share"> </item>
                </group>
            </menu>
        </item>
    </group>
</menu>